tests/tutorial/assets/vue/pages/errors/403/component.vue
<template>
    <div style="width: 100%;">
        <h1 style="textAlign: center;">403 Error</h1>
        <h2 style="textAlign: center;">Forbidden Page</h2>
    </div>
</template>

<script>
export default {
    name: 'Root',
    data() {
        return {

        }
    }
}
</script>

